feat: adicionando pasta de distribuição com os jdk e sdk, além do .jar e o executável .bat